Fixed contrast colors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,7 +162,7 @@ html {
     -moz-transition: color 0.15s linear;
     transition: color 0.15s linear;
     text-decoration: none;
-    color: #cf0000;
+    color: #FFA500;
     cursor: pointer;
     }
   
